# mcp-server-code-execution-mode

./: .gitignore  ARCHITECTURE.md  GUIDE.md  HISTORY.md  README.md  STATUS.md  mcp_server_code_execution_mode.py  pyproject.toml  requirements.txt
tests/: stub_mcp_server.py  test_entrypoint.py  test_integration.py  test_no_runtime.py  test_toon_responses.py
